--- a/menu_3.html
+++ b/menu_3.html
@@ -1,1 +1,186 @@
-menu 3
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>omf - menu</title>
+    <link rel="stylesheet" href="menus.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <div class="header__logo">
+          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+          <div><img src="img/omf.svg" alt="logo ohmyfood" /></div>
+        </div>
+        <img src="img/francaise.jpg" alt="photo d'un plat" class="header__img" />
+      </header>
+
+      <main class="main">
+        <div class="main__resto">
+          <h1>À la française</h1>
+          <i class="far fa-heart"></i>
+        </div>
+
+        <div class="main__entrees">
+          <h2>entrées</h2>
+          <div class="main__bar"></div>
+          <div class="main__cards">
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Tartare de poulpe acidulé</h3>
+                <div class="main__desc">
+                  <p>Aux zestes d'orange</p>
+                  <p><strong>25€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Velouté de légumes d'antan</h3>
+                <div class="main__desc">
+                  <p>Carotte, panais, topinambour</p>
+                  <p><strong>35€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Soupe à l'oignon</h3>
+                <div class="main__desc">
+                  <p>Revisitée</p>
+                  <p><strong>20€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main__plats">
+          <h2>plats</h2>
+          <div class="main__bar"></div>
+          <div class="main__cards">
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Coquilles Saint-Jacques</h3>
+                <div class="main__desc">
+                  <p>Accompagnées d'une purée de panais</p>
+                  <p><strong>40€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Magret de canard</h3>
+                <div class="main__desc">
+                  <p>Et parmentier de pommes de terre</p>
+                  <p><strong>35€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                <div class="main__desc">
+                  <p>Sur son lit de gnocchis aux légumes</p>
+                  <p><strong>44€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main__desserts">
+          <h2>desserts</h2>
+          <div class="main__bar"></div>
+          <div class="main__cards">
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Pétales de violettes glacés</h3>
+                <div class="main__desc">
+                  <p>Et purée de noisettes</p>
+                  <p><strong>18€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Fondant au chocolat</h3>
+                <div class="main__desc">
+                  <p>Revisité</p>
+                  <p><strong>22€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+
+            <div class="main__card">
+              <div class="main__txt">
+                <h3>Millefeuille croustillant</h3>
+                <div class="main__desc">
+                  <p>Myrtilles et pâte d’amande</p>
+                  <p><strong>23€</strong></p>
+                </div>
+              </div>
+              <div class="main__check">
+                <a href="#"><i class="fas fa-check-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="main__btn">Commander</button>
+      </main>
+
+      <footer class="footer">
+        <h2>ohmyfood</h2>
+        <div>
+          <div class="footer__icon"><i class="fas fa-utensils"></i></div>
+          <p>Proposer un restaurant</p>
+        </div>
+        <div>
+          <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
+          <p>Devenir partenaire</p>
+        </div>
+        <p>Mentions légales</p>
+        <p>Contact</p>
+      </footer>
+    </div>
+  </body>
+</html>
