animation test / css

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
           <i class="fas fa-map-marker-alt"></i>
           <p>Paris, Belleville</p>
         </div>
-        <h1>
-          Réservez le menu qui <br />
-          vous convient
-        </h1>
-        <p>
-          Découvrez des restaurants d'exception, <br />
-          sélectionnés par nos soins.
-        </p>
-        <button>Explorer nos restaurants</button>
+        <div class="header__slogan">
+          <h1>
+            Réservez le menu qui <br />
+            vous convient
+          </h1>
+          <p>
+            Découvrez des restaurants d'exception, <br />
+            sélectionnés par nos soins.
+          </p>
+          <button>Explorer nos restaurants</button>
+        </div>
       </header>
 
       <nav class="nav">
@@ -40,17 +42,17 @@
         <div class="nav__cards">
           <div class="nav__card">
             <div class="nav__number"><p>1</p></div>
-            <i class="fas fa-mobile-alt"></i>
+            <div class="nav__icon"><i class="fas fa-mobile-alt"></i></div>
             <p class="nav__txt">Choisissez un restaurant</p>
           </div>
           <div class="nav__card">
             <div class="nav__number"><p>2</p></div>
-            <i class="fas fa-list-ul"></i>
+            <div class="nav__icon"><i class="fas fa-list-ul"></i></div>
             <p class="nav__txt">Composez votre menu</p>
           </div>
-          <div class="nav__card">
+          <div class="nav__card purple">
             <div class="nav__number"><p>3</p></div>
-            <i class="tuto__icon fas fa-store"></i>
+            <div class="nav__icon"><i class="tuto__icon fas fa-store"></i></div>
             <p class="nav__txt">Dégustez au restaurant</p>
           </div>
         </div>
@@ -67,7 +69,10 @@
                   <h2>La Palette du goût</h2>
                   <p>Ménilmontant</p>
                 </div>
-                <div class="main__coeur"><i class="far fa-arrow-alt-circle-right"></i></div>
+                <a href="#" class="main__coeur">
+                  <div class="empty"><i class="far fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart"></i></div>
+                </a>
               </div>
             </div>
           </a>
@@ -80,7 +85,10 @@
                   <h2>La note enchantée</h2>
                   <p>Charonne</p>
                 </div>
-                <div class="main__coeur"><i class="far fa-arrow-alt-circle-right"></i></div>
+                <a href="#" class="main__coeur">
+                  <div class="empty"><i class="far fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart"></i></div>
+                </a>
               </div>
             </div>
           </a>
@@ -93,7 +101,10 @@
                   <h2>À la française</h2>
                   <p>Cité Rouge</p>
                 </div>
-                <div class="main__coeur"><i class="far fa-arrow-alt-circle-right"></i></div>
+                <a href="#" class="main__coeur">
+                  <div class="empty"><i class="far fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart"></i></div>
+                </a>
               </div>
             </div>
           </a>
@@ -106,7 +117,10 @@
                   <h2>Le délice des sens</h2>
                   <p>Folie-Méricourt</p>
                 </div>
-                <div class="main__coeur"><i class="far fa-arrow-alt-circle-right"></i></div>
+                <a href="#" class="main__coeur">
+                  <div class="empty"><i class="far fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart"></i></div>
+                </a>
               </div>
             </div>
           </a>
