--- a/menu_1.html
+++ b/menu_1.html
@@ -28,7 +28,10 @@
       <main class="main">
         <div class="main__resto">
           <h1>La palette du goût</h1>
-          <i class="far fa-heart"></i>
+          <a href="#" class="main__coeur">
+            <div class="empty"><i class="far fa-heart"></i></div>
+            <div class="full"><i class="fas fa-heart"></i></div>
+          </a>
         </div>
 
         <div class="main__entrees">
@@ -37,10 +40,10 @@
           <div class="main__cards">
             <div class="main__card">
               <div class="main__txt">
-                <h3>Fricassé d'escargot</h3>
+                <h3>Fricassée d'escargot</h3>
                 <div class="main__desc">
-                  <p>Au piment d'espelette</p>
-                  <p><strong>25€</strong></p>
+                  <div>Au piment d'espelette et aussi avec des</div>
+                  <div><strong>25€</strong></div>
                 </div>
               </div>
               <div class="main__check">
