--- a/menu_2.html
+++ b/menu_2.html
@@ -28,7 +28,10 @@
       <main class="main">
         <div class="main__resto">
           <h1>La note enchantée</h1>
-          <i class="far fa-heart"></i>
+          <div class="main__coeur">
+            <div class="empty"><i class="far fa-heart"></i></div>
+            <div class="full"><i class="fas fa-heart"></i></div>
+          </div>
         </div>
 
         <div class="main__entrees">
