test + index OK

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <main class="main">
         <h1>Restaurants</h1>
         <div class="main__cards">
-          <a href="menu_1.html">
+          <a href="testmenu.html">
             <div class="main__card">
               <img src="img/palette.jpg" alt="#" />
               <div class="main__subt">
