--- a/testmenu.html
+++ b/testmenu.html
@@ -27,7 +27,7 @@
 
       <main class="main">
         <div class="main__resto">
-          <h1>La palette du goût</h1>
+          <h1>Restaurant</h1>
           <a href="#" class="main__coeur">
             <div class="empty"><i class="far fa-heart"></i></div>
             <div class="full"><i class="fas fa-heart"></i></div>
@@ -40,39 +40,40 @@
           <div class="main__cards">
             <div class="main__card delay-0">
               <div class="main__txt">
-                <h3 class="main__title">Fricassée d'escargot avec de l'estragon</h3>
-                <p class="main__desc">Au piment d'espelette et aussi avec des</p>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
               <p class="main__prix">25€</p>
 
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
 
             <div class="main__card delay-1">
               <div class="main__txt">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <div class="main__desc">
-                  <p>Et ses copeaux de truffe noire</p>
-                  <p><strong>35€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
 
             <div class="main__card delay-2">
               <div class="main__txt">
-                <h3>Oeuf au plat</h3>
-                <div class="main__desc">
-                  <p>Assaisonné à la truffe sur lit de caviar</p>
-                  <p><strong>20€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
           </div>
@@ -84,40 +85,40 @@
           <div class="main__cards">
             <div class="main__card delay-0">
               <div class="main__txt">
-                <h3>Filet de boeuf aux herbes</h3>
-                <div class="main__desc">
-                  <p>Accompagné de sa ribambelle de légumes</p>
-                  <p><strong>40€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
 
             <div class="main__card delay-1">
               <div class="main__txt">
-                <h3>Parmentier de queue de boeuf</h3>
-                <div class="main__desc">
-                  <p>À la truffe noire sur sa purée de panais</p>
-                  <p><strong>35€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
 
             <div class="main__card delay-2">
               <div class="main__txt">
-                <h3>Filet de turbot</h3>
-                <div class="main__desc">
-                  <p>Aux agrumes</p>
-                  <p><strong>44€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
           </div>
@@ -129,40 +130,40 @@
           <div class="main__cards">
             <div class="main__card delay-0">
               <div class="main__txt">
-                <h3>Paris-Brest</h3>
-                <div class="main__desc">
-                  <p>Revisité</p>
-                  <p><strong>18€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
 
             <div class="main__card delay-1">
               <div class="main__txt">
-                <h3>Macaron au chocolat d'exception</h3>
-                <div class="main__desc">
-                  <p>Et glace à la vanille de Madagascar</p>
-                  <p><strong>22€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
 
             <div class="main__card delay-2">
               <div class="main__txt">
-                <h3>Mousse au chocolat</h3>
-                <div class="main__desc">
-                  <p>Au piment d'Espelette et à la truffe noire</p>
-                  <p><strong>23€</strong></p>
-                </div>
+                <h3 class="main__title">Plat</h3>
+                <p class="main__desc">Description</p>
               </div>
+
+              <p class="main__prix">25€</p>
+
               <div class="main__check">
-                <a href="#"><i class="fas fa-check-circle"></i></a>
+                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
               </div>
             </div>
           </div>
