--- a/testmenu.html
+++ b/testmenu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>omf - menu</title>
-    <link rel="stylesheet" href="testmenu.css" />
+    <link rel="stylesheet" href="menu.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
