--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <main class="main">
         <h1>Restaurants</h1>
         <div class="main__cards">
-          <a href="testmenu.html">
+          <a href="palette.html">
             <div class="main__card">
               <img src="img/palette.jpg" alt="#" />
               <div class="main__subt">
@@ -77,7 +77,7 @@
             </div>
           </a>
 
-          <a href="menu_2.html">
+          <a href="note.html">
             <div class="main__card">
               <img src="img/note2.jpg" alt="#" />
               <div class="main__subt">
@@ -93,7 +93,7 @@
             </div>
           </a>
 
-          <a href="menu_3.html">
+          <a href="francaise.html">
             <div class="main__card">
               <img src="img/francaise.jpg" alt="#" />
               <div class="main__subt">
@@ -109,7 +109,7 @@
             </div>
           </a>
 
-          <a href="menu_4.html">
+          <a href="delice.html">
             <div class="main__card">
               <img src="img/delices.jpg" alt="#" />
               <div class="main__subt">
